--- a/index.html
+++ b/index.html
@@ -23,5 +23,12 @@
                 </ul>
                 <!--  search form end -->                
             </div>
+                  <nav class="nav navbar-brand">
+                      <ul>
+                        <li>
+                          <a href="index.html">Contact</a>
+                        </li>
+                    </ul>
+                  </nav>
        </body>
        </html>
